TEPF-230 Tiny UI adjustment Fixed gap between sidebar and navbar in explorer

--- a/f-tep-portal/src/main/resources/app/main.css
+++ b/f-tep-portal/src/main/resources/app/main.css
@@ -1877,6 +1877,7 @@
   margin: 0;
 }
 
+#explorer-container,
 #sidebar-left .datasources md-list-item {
   border: none;
 }
