--- a/f-tep-portal/src/main/resources/app/styles/less/explorer/explorer.less
+++ b/f-tep-portal/src/main/resources/app/styles/less/explorer/explorer.less
@@ -1,4 +1,5 @@
 @import "variable";
+#explorer-container,
 #sidebar-left .datasources md-list-item {
     border: none;
 }
